# reggae_test

./: README.md
animal/: meson.build
animal/src/animal/: cat.d  dog.d
multisrc/: dub.sdl
multisrc/src/insects/: cricket.d
multisrc/src/multisrc/: dog.d
myapp/: meson.build
static_library/: README.md
static_library/animal/: reggaefile.d
static_library/myapp/src/: app.d
types/: app.d
